--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^5.4.3",
+    "terser": "^5.36.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
   },
