--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "ooze",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-legacy": "^5.4.3",
-    "terser": "^5.36.0",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+	"name": "ooze",
+	"private": true,
+	"version": "0.0.0",
+	"homepage": "https://it4ban.github.io/ooze/",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-legacy": "^5.4.3",
+		"gh-pages": "^6.2.0",
+		"terser": "^5.36.0",
+		"typescript": "~5.6.2",
+		"vite": "^5.4.10"
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
